# sylpheed-mruby

./: .gitignore  .gitmodules  .travis.yml  Makefile.am  README.md  build_mymruby.rb  configure.ac
examples/: hellomruby.rb  sylmruby.rb
src/: Makefile.am  copying.h  sylmruby.c  sylmruby.h
